--- a/style/main.css
+++ b/style/main.css
@@ -309,6 +309,20 @@ body:has(.privacy_option.on) {
   transform: rotate(45deg);
 }
 
+.menu_black {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: none;
+  z-index: 3;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.menu_black.on {
+  display: block;
+}
+
 .menu_bg {
   width: 100%;
   height: 100vh;
@@ -321,7 +335,11 @@ body:has(.privacy_option.on) {
   background-image: url(../img/menu_bg__23K07p125u.jpg);
   background-size: cover;
   opacity: 0;
-  overflow-y: auto;
+}
+@media screen and (max-width: 840px) {
+  .menu_bg {
+    overflow-y: auto;
+  }
 }
 .menu_bg.on {
   transition: all 1s linear;
@@ -457,6 +475,20 @@ body:has(.privacy_option.on) {
   flex-wrap: wrap;
   z-index: 3;
   color: #fff;
+  opacity: 0;
+}
+.menu_bg .wrap .menu_bg_list ul.on {
+  animation: ppp 0.5s 0.5s linear forwards;
+}
+@keyframes ppp {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 @media screen and (max-width: 1500px) {
   .menu_bg .wrap .menu_bg_list ul {
@@ -476,6 +508,9 @@ body:has(.privacy_option.on) {
   .menu_bg .wrap .menu_bg_list ul {
     flex-wrap: nowrap;
     flex-direction: column;
+    left: auto;
+    width: 100%;
+    padding-left: 20px;
   }
 }
 .menu_bg .wrap .menu_bg_list ul li {
@@ -513,7 +548,7 @@ body:has(.privacy_option.on) {
   padding-bottom: 10px;
 }
 .menu_bg .wrap .menu_bg_list ul li:hover::after {
-  width: 80%;
+  width: 50%;
 }
 .menu_bg .wrap .menu_bg_list ul li:nth-child(even) {
   padding-left: 30px;
@@ -549,6 +584,7 @@ body:has(.privacy_option.on) {
 }
 @media screen and (max-width: 840px) {
   .menu_bg .wrap .menu_bg_list .top_box {
+    width: 100%;
     padding-left: 10px;
     display: flex;
     left: auto;
@@ -581,6 +617,9 @@ body:has(.privacy_option.on) {
 .menu_bg .wrap .menu_bg_list .top_box .email p:hover::after {
   width: 100%;
 }
+.menu_bg .wrap .menu_bg_list .top_box .email p {
+  padding-left: 20px;
+}
 .menu_bg .wrap .menu_bg_list .top_box .message {
   padding: 6px 0;
   display: flex;
@@ -610,8 +649,23 @@ body:has(.privacy_option.on) {
   transition: 0.5s;
   opacity: 0.5;
 }
-.menu_bg .wrap .menu_bg_list .top_box .address p {
-  margin-left: 30px;
+.menu_bg .wrap .menu_bg_list .top_box .top_menu {
+  opacity: 0;
+}
+.menu_bg .wrap .menu_bg_list .top_box .top_menu.on {
+  animation: ppp 0.5s 1s linear forwards;
+}
+.menu_bg .wrap .menu_bg_list .top_box .menu_link {
+  opacity: 0;
+}
+.menu_bg .wrap .menu_bg_list .top_box .menu_link.on {
+  animation: ppp 0.5s 1.5s linear forwards;
+}
+.menu_bg .wrap .menu_bg_list .top_box .menu_footer {
+  opacity: 0;
+}
+.menu_bg .wrap .menu_bg_list .top_box .menu_footer.on {
+  animation: ppp 0.5s 2s linear forwards;
 }
 .menu_bg::before {
   content: "";
@@ -1083,6 +1137,11 @@ body:has(.privacy_option.on) {
     right: -60px;
   }
 }
+.header .header_box .language_box .language_list.on li:hover {
+  background-color: #63bedf;
+  color: #fff;
+  transition: 0.5s linear;
+}
 .header .header_box .language_box .language_list.on li + li {
   margin-top: 5px;
 }
@@ -1349,6 +1408,7 @@ body:has(.privacy_option.on) {
 .hd_bg .header_bg li h2 {
   top: 50%;
   left: 7%;
+  padding-top: 20px;
   font-size: 23px;
   opacity: 0;
   display: flex;
@@ -1938,16 +1998,14 @@ body:has(.privacy_option.on) {
     left: 34%;
   }
 }
-.brand .brand_about:hover {
-  transition: 1s;
-}
 .brand .brand_about:hover button {
   color: #36af63;
   border-color: #36af63;
 }
 .brand .brand_about:hover .arrow {
   background-color: #36af63;
-  animation: aa 1s forwards;
+  transform: translateX(20px);
+  transition: transform 0.5s linear;
 }
 .brand .brand_about:hover .arrow::before {
   background-color: #36af63;
@@ -1974,6 +2032,7 @@ body:has(.privacy_option.on) {
   position: absolute;
   top: 50%;
   right: -20%;
+  transition: transform 0.5s linear;
 }
 .brand .brand_about .arrow::before {
   content: "";
@@ -2051,6 +2110,16 @@ body:has(.privacy_option.on) {
   justify-content: center;
   overflow: hidden;
 }
+@media screen and (max-width: 1300px) {
+  .field .field_bg {
+    padding-left: 300px;
+  }
+}
+@media screen and (max-width: 960px) {
+  .field .field_bg {
+    padding-left: 0px;
+  }
+}
 @media screen and (max-width: 600px) {
   .field .field_bg {
     justify-content: inherit;
@@ -2062,11 +2131,27 @@ body:has(.privacy_option.on) {
 }
 .field .field_list::before {
   content: "";
-  width: 130px;
+  width: 65px;
   height: 100%;
   position: absolute;
   background: #fff;
   left: -130px;
+  z-index: 2;
+}
+@media screen and (max-width: 1600px) {
+  .field .field_list::before {
+    left: 0;
+  }
+}
+@media screen and (max-width: 1300px) {
+  .field .field_list::before {
+    left: -65px;
+  }
+}
+@media screen and (max-width: 960px) {
+  .field .field_list::before {
+    display: none;
+  }
 }
 .field .field_list .slick-list {
   overflow: initial;
@@ -2077,24 +2162,29 @@ body:has(.privacy_option.on) {
     max-width: none;
   }
 }
-@media screen and (max-width: 1180px) {
+@media screen and (max-width: 1600px) {
+  .field .field_list .slick-list .slick-track {
+    max-width: 1200%;
+  }
+}
+@media screen and (max-width: 1300px) {
   .field .field_list .slick-list .slick-track {
     max-width: 1000%;
   }
 }
 @media screen and (max-width: 960px) {
   .field .field_list .slick-list .slick-track {
-    max-width: 1200%;
+    max-width: 1400%;
   }
 }
 @media screen and (max-width: 800px) {
   .field .field_list .slick-list .slick-track {
-    max-width: 1100%;
+    max-width: 1200%;
   }
 }
 @media screen and (max-width: 700px) {
   .field .field_list .slick-list .slick-track {
-    max-width: 1000%;
+    max-width: 1100%;
   }
 }
 @media screen and (max-width: 600px) {
@@ -2102,14 +2192,24 @@ body:has(.privacy_option.on) {
     max-width: 800%;
   }
 }
+@media screen and (max-width: 500px) {
+  .field .field_list .slick-list .slick-track {
+    max-width: 700%;
+  }
+}
+@media screen and (max-width: 450px) {
+  .field .field_list .slick-list .slick-track {
+    max-width: 600%;
+  }
+}
 @media screen and (max-width: 400px) {
   .field .field_list .slick-list .slick-track {
-    max-width: 900%;
+    max-width: 550%;
   }
 }
 @media screen and (max-width: 350px) {
   .field .field_list .slick-list .slick-track {
-    max-width: 800%;
+    max-width: 450%;
   }
 }
 .field .field_list li {
@@ -2130,10 +2230,9 @@ body:has(.privacy_option.on) {
 .field .field_list li p {
   padding-top: 10px;
 }
-@media screen and (max-width: 1180px) {
+@media screen and (max-width: 1600px) {
   .field .field_list li {
     margin: 0 auto;
-    padding-left: 125px;
   }
 }
 @media screen and (max-width: 960px) {
@@ -2167,14 +2266,9 @@ body:has(.privacy_option.on) {
     margin: 0 90px 0 0;
   }
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 500px) {
   .field .field_list li {
-    margin: 0 170px 0 0;
-  }
-}
-@media screen and (max-width: 370px) {
-  .field .field_list li {
-    margin: 0 250px 0 0;
+    margin: 0;
   }
 }
 .field .field_list .slick-slide {
@@ -2197,15 +2291,29 @@ body:has(.privacy_option.on) {
   overflow: hidden;
   border-radius: 20px;
 }
+@media screen and (max-width: 1600px) {
+  .field .field_list .slick-slide .img {
+    margin: 0 10px 0 75px;
+  }
+}
+@media screen and (max-width: 1300px) {
+  .field .field_list .slick-slide .img {
+    margin: 0 65px 0 0;
+  }
+}
 @media screen and (max-width: 1180px) {
   .field .field_list .slick-slide .img {
     margin-left: 50px;
-    border-radius: 30px;
   }
 }
 @media screen and (max-width: 600px) {
   .field .field_list .slick-slide .img {
     margin: 0 40px;
+  }
+}
+@media screen and (max-width: 400px) {
+  .field .field_list .slick-slide .img {
+    margin: 0 20px;
   }
 }
 @media screen and (max-width: 1180px) {
@@ -2261,9 +2369,20 @@ body:has(.privacy_option.on) {
   left: 40%;
   content: "<";
 }
+@media screen and (max-width: 1600px) {
+  .field .field_list .slick-prev {
+    left: 0;
+  }
+}
+@media screen and (max-width: 1300px) {
+  .field .field_list .slick-prev {
+    left: -7%;
+    top: 40%;
+  }
+}
 @media screen and (max-width: 1180px) {
   .field .field_list .slick-prev {
-    left: 4%;
+    left: -4%;
     top: 40%;
   }
 }
@@ -2277,9 +2396,20 @@ body:has(.privacy_option.on) {
   top: 30%;
   left: 40%;
 }
+@media screen and (max-width: 1600px) {
+  .field .field_list .slick-next {
+    right: 0;
+  }
+}
+@media screen and (max-width: 1300px) {
+  .field .field_list .slick-next {
+    right: 23%;
+    top: 40%;
+  }
+}
 @media screen and (max-width: 1180px) {
   .field .field_list .slick-next {
-    right: 11%;
+    right: 20%;
     top: 40%;
   }
 }
@@ -2296,7 +2426,7 @@ body:has(.privacy_option.on) {
 }
 .field .field_about:hover .arrow {
   background-color: #36af63;
-  animation: aa 1s forwards;
+  transform: translateX(20px);
 }
 .field .field_about:hover .arrow::before {
   background-color: #36af63;
@@ -2323,6 +2453,7 @@ body:has(.privacy_option.on) {
   position: absolute;
   right: -35px;
   top: 50%;
+  transition: transform 0.5s linear;
 }
 .field .field_about .arrow::before {
   content: "";
@@ -2464,11 +2595,6 @@ body:has(.privacy_option.on) {
     line-height: 2;
   }
 }
-@media screen and (max-width: 1180px) and (max-width: 400px) {
-  .events .content li .item .txt {
-    left: -48px;
-  }
-}
 .events .content li .item .txt p {
   padding-top: 16px;
 }
@@ -2517,6 +2643,7 @@ body:has(.privacy_option.on) {
   position: absolute;
   top: 37%;
   right: -20%;
+  transition: transform 0.5s linear;
 }
 @media screen and (max-width: 1180px) {
   .events .content li .item .event_about .arrow {
@@ -2542,7 +2669,7 @@ body:has(.privacy_option.on) {
 }
 .events .content li .item .event_about:hover .arrow {
   background-color: #36af63;
-  animation: aa 1s forwards;
+  transform: translateX(20px);
 }
 .events .content li .item .event_about:hover .arrow::before {
   background-color: #36af63;
@@ -2592,13 +2719,37 @@ body:has(.privacy_option.on) {
     left: 10%;
   }
 }
-.events .content .slick-dots .slick-active::after {
-  color: #36af63;
-  border-top: 1px solid #36af63;
-  border-bottom: 1px solid #36af63;
-}
 .events .content .slick-dots li {
   margin: 0 30px;
+}
+.events .content .slick-dots li:hover {
+  color: #36af63;
+}
+.events .content .slick-dots li:hover::before {
+  width: 35px !important;
+  transition: 0.5s linear;
+}
+.events .content .slick-dots li:hover button::after {
+  animation: vvv 0.5s linear forwards;
+}
+@keyframes vvv {
+  from {
+    left: 51px;
+    width: 0px;
+  }
+  to {
+    left: 20px;
+    width: 35px;
+  }
+}
+.events .content .slick-dots li:first-child::before {
+  content: "";
+  width: 0px;
+  height: 1px;
+  position: absolute;
+  background-color: #36af63;
+  left: 20px;
+  z-index: 2;
 }
 .events .content .slick-dots li:first-child::after {
   content: "牽手";
@@ -2609,7 +2760,17 @@ body:has(.privacy_option.on) {
   position: absolute;
   top: 0;
   left: 20px;
-  transition: 0.5s;
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+}
+.events .content .slick-dots li:nth-child(2)::before {
+  content: "";
+  width: 0px;
+  height: 1px;
+  position: absolute;
+  background-color: #36af63;
+  left: 20px;
+  z-index: 2;
 }
 .events .content .slick-dots li:nth-child(2)::after {
   content: "歡聚";
@@ -2620,7 +2781,17 @@ body:has(.privacy_option.on) {
   position: absolute;
   top: 0;
   left: 20px;
-  transition: 0.5s;
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+}
+.events .content .slick-dots li:nth-child(3)::before {
+  content: "";
+  width: 0px;
+  height: 1px;
+  position: absolute;
+  background-color: #36af63;
+  left: 20px;
+  z-index: 2;
 }
 .events .content .slick-dots li:nth-child(3)::after {
   content: "同事";
@@ -2631,7 +2802,39 @@ body:has(.privacy_option.on) {
   position: absolute;
   top: 0;
   left: 20px;
-  transition: 0.5s;
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  overflow: hidden;
+}
+.events .content .slick-dots button::after {
+  content: "";
+  width: 0px;
+  height: 1px;
+  position: absolute;
+  background-color: #36af63;
+  left: 51px;
+  bottom: -15%;
+  z-index: 2;
+}
+.events .content .slick-dots .slick-active {
+  color: #36af63;
+}
+.events .content .slick-dots .slick-active::before {
+  width: 35px !important;
+  transition: 0.5s linear;
+}
+.events .content .slick-dots .slick-active button::after {
+  animation: vvv 0.5s linear forwards;
+}
+@keyframes vvv {
+  from {
+    left: 51px;
+    width: 0px;
+  }
+  to {
+    left: 20px;
+    width: 35px;
+  }
 }
 
 .rooms {
@@ -3468,7 +3671,7 @@ body:has(.privacy_option.on) {
 }
 .rooms .rooms_about:hover .arrow {
   background-color: #36af63;
-  animation: aa 1s forwards;
+  transform: translateX(20px);
 }
 .rooms .rooms_about:hover .arrow::before {
   background-color: #36af63;
@@ -3495,6 +3698,7 @@ body:has(.privacy_option.on) {
   position: absolute;
   right: -35px;
   top: 50%;
+  transition: transform 0.5s linear;
 }
 .rooms .rooms_about .arrow::before {
   content: "";
@@ -3961,15 +4165,7 @@ body:has(.privacy_option.on) {
 }
 .dining .dining_title .dining_about:hover .arrow {
   background-color: #36af63;
-  animation: aa 1s forwards;
-}
-@keyframes aa {
-  from {
-    right: -20%;
-  }
-  to {
-    right: -33%;
-  }
+  transform: translateX(20px);
 }
 .dining .dining_title .dining_about:hover .arrow::before {
   background-color: #36af63;
@@ -3996,6 +4192,7 @@ body:has(.privacy_option.on) {
   position: absolute;
   right: -35px;
   top: 50%;
+  transition: transform 0.5s linear;
 }
 .dining .dining_title .dining_about .arrow::before {
   content: "";
@@ -4027,15 +4224,7 @@ body:has(.privacy_option.on) {
 }
 .dining .dining_about_m:hover .arrow {
   background-color: #36af63;
-  animation: jjj 1s forwards;
-}
-@keyframes jjj {
-  from {
-    left: 55%;
-  }
-  to {
-    left: 57%;
-  }
+  transform: translateX(20px);
 }
 .dining .dining_about_m:hover .arrow::before {
   background-color: #36af63;
@@ -4088,6 +4277,7 @@ body:has(.privacy_option.on) {
   position: absolute;
   left: 55%;
   top: 87%;
+  transition: transform 0.5s linear;
 }
 .dining .dining_about_m .arrow::before {
   content: "";
