--- a/style/main.css
+++ b/style/main.css
@@ -334,7 +334,6 @@ body:has(.privacy_option.on) {
   transition: all 1s linear;
   background-image: url(../img/menu_bg__23K07p125u.jpg);
   background-size: cover;
-  opacity: 0;
 }
 @media screen and (max-width: 840px) {
   .menu_bg {
@@ -343,7 +342,6 @@ body:has(.privacy_option.on) {
 }
 .menu_bg.on {
   transition: all 1s linear;
-  opacity: 1;
   transform: translateX(0%);
 }
 .menu_bg.on::before {
@@ -372,7 +370,7 @@ body:has(.privacy_option.on) {
     display: block;
   }
 }
-.menu_bg .wrap .menu_box .language_box {
+.menu_bg .wrap .menu_box .language_box .language_txt {
   padding: 25px 10px;
   display: flex;
   border: 1px solid #fff;
@@ -384,17 +382,19 @@ body:has(.privacy_option.on) {
   position: relative;
   cursor: pointer;
 }
-.menu_bg .wrap .menu_box .language_box:hover {
-  border: 1px solid rgba(255, 255, 255, 0.5);
-  color: rgba(255, 255, 255, 0.5);
+.menu_bg .wrap .menu_box .language_box .language_txt:hover {
+  opacity: 0.5;
 }
-.menu_bg .wrap .menu_box .language_box p {
+.menu_bg .wrap .menu_box .language_box .language_txt p {
   padding-top: 20px;
 }
 .menu_bg .wrap .menu_box .language_box .language_list {
   position: absolute;
+  flex-direction: column;
   display: none;
   left: -115px;
+  top: 0;
+  transition: all 0.5s linear;
 }
 .menu_bg .wrap .menu_box .language_box .language_list.on {
   display: flex;
@@ -408,22 +408,29 @@ body:has(.privacy_option.on) {
   position: relative;
   opacity: 0;
   cursor: pointer;
-  animation: cc 0.5s 0.5s linear forwards;
+  animation: yyyy 0.5s 0.5s linear forwards;
+  z-index: 2;
 }
 .menu_bg .wrap .menu_box .language_box .language_list.on li:first-child {
   background-color: #63bedf;
   color: #fff;
-  animation: cc 0.5s linear forwards;
+  z-index: 2;
+  animation: yyyy 0.5s linear forwards;
 }
-@keyframes cc {
+@keyframes yyyy {
   from {
     opacity: 0;
-    right: -50px;
+    right: -80px;
   }
   to {
     opacity: 1;
     right: -60px;
   }
+}
+.menu_bg .wrap .menu_box .language_box .language_list.on li:hover {
+  background-color: #63bedf;
+  color: #fff;
+  transition: 0.5s linear;
 }
 .menu_bg .wrap .menu_box .language_box .language_list.on li + li {
   margin-top: 5px;
@@ -437,6 +444,7 @@ body:has(.privacy_option.on) {
   border: 1px solid #fff;
   border-radius: 50px;
   color: #fff;
+  cursor: pointer;
 }
 .menu_bg .wrap .menu_box .message_box:hover {
   opacity: 0.5;
@@ -478,7 +486,7 @@ body:has(.privacy_option.on) {
   opacity: 0;
 }
 .menu_bg .wrap .menu_bg_list ul.on {
-  animation: ppp 0.5s 0.5s linear forwards;
+  animation: ppp 0.5s 1s linear forwards;
 }
 @keyframes ppp {
   from {
@@ -510,7 +518,8 @@ body:has(.privacy_option.on) {
     flex-direction: column;
     left: auto;
     width: 100%;
-    padding-left: 20px;
+    margin-right: 70px;
+    padding-left: 50px;
   }
 }
 .menu_bg .wrap .menu_bg_list ul li {
@@ -653,19 +662,19 @@ body:has(.privacy_option.on) {
   opacity: 0;
 }
 .menu_bg .wrap .menu_bg_list .top_box .top_menu.on {
-  animation: ppp 0.5s 1s linear forwards;
+  animation: ppp 0.5s 1.5s linear forwards;
 }
 .menu_bg .wrap .menu_bg_list .top_box .menu_link {
   opacity: 0;
 }
 .menu_bg .wrap .menu_bg_list .top_box .menu_link.on {
-  animation: ppp 0.5s 1.5s linear forwards;
+  animation: ppp 0.5s 1.8s linear forwards;
 }
 .menu_bg .wrap .menu_bg_list .top_box .menu_footer {
   opacity: 0;
 }
 .menu_bg .wrap .menu_bg_list .top_box .menu_footer.on {
-  animation: ppp 0.5s 2s linear forwards;
+  animation: ppp 0.5s 2.2s linear forwards;
 }
 .menu_bg::before {
   content: "";
@@ -695,32 +704,47 @@ body:has(.privacy_option.on) {
     display: none;
   }
 }
-.label_list li {
-  width: 40px;
+.label_list ul {
+  text-align: center;
+}
+.label_list ul li {
+  width: 1px;
   height: 40px;
-  padding: 0 60px;
+  padding: 0px 60px;
   display: flex;
+  align-items: center;
   position: relative;
   transition: all 0.2s linear;
 }
-.label_list li.on {
-  height: 90px;
+.label_list ul li .line {
+  height: 40px;
+  position: absolute;
+  width: 1px;
+  background-color: #b2b2b2;
+  z-index: 2;
 }
-.label_list li.on::before {
-  height: 90px;
+.label_list ul li.on {
+  height: 100px;
+}
+.label_list ul li.on .line {
+  height: 100%;
+  width: 1px;
   background-color: #36af63;
+  transition: 0.2s linear;
 }
-.label_list li.on h2 {
+.label_list ul li.on h2 {
   opacity: 1;
 }
-.label_list li:hover {
-  height: 90px;
+.label_list ul li:hover {
+  height: 100px;
 }
-.label_list li:hover::before {
-  height: 90px;
+.label_list ul li:hover .line {
+  height: 100%;
+  width: 1px;
   background-color: #36af63;
+  transition: 0.2s linear;
 }
-.label_list li:hover h2 {
+.label_list ul li:hover h2 {
   animation: ggg 0.5s linear forwards;
 }
 @keyframes ggg {
@@ -733,20 +757,12 @@ body:has(.privacy_option.on) {
     left: 25px;
   }
 }
-.label_list li::before {
-  content: "";
-  width: 2px;
-  height: 100%;
-  position: absolute;
-  left: 50%;
-  transition: 0.2s linear;
-  background-color: #b2b2b2;
-}
-.label_list li + li {
+.label_list ul li + li {
   margin-top: 10px;
 }
-.label_list li h2 {
+.label_list ul li h2 {
   opacity: 0;
+  padding: 5px 0;
   writing-mode: vertical-lr;
   position: absolute;
   left: 25px;
@@ -754,9 +770,10 @@ body:has(.privacy_option.on) {
   white-space: nowrap;
   letter-spacing: 2.5px;
 }
-.label_list li a {
+.label_list ul li a {
   width: 100%;
   height: 100%;
+  left: 0;
   position: absolute;
 }
 
@@ -1086,6 +1103,9 @@ body:has(.privacy_option.on) {
   left: 30%;
 }
 .header .header_box .language_box {
+  position: relative;
+}
+.header .header_box .language_box .language_txt {
   padding: 25px 10px;
   display: flex;
   border: 1px solid #fff;
@@ -1097,53 +1117,74 @@ body:has(.privacy_option.on) {
   position: relative;
   cursor: pointer;
 }
-.header .header_box .language_box:hover {
-  border: 1px solid rgba(0, 0, 0, 0.5);
-  color: rgba(0, 0, 0, 0.5);
+.header .header_box .language_box .language_txt:hover {
+  opacity: 0.5;
 }
-.header .header_box .language_box p {
+.header .header_box .language_box .language_txt p {
   padding-top: 20px;
 }
 .header .header_box .language_box .language_list {
   position: absolute;
-  display: none;
-}
-.header .header_box .language_box .language_list.on {
   display: flex;
+  flex-direction: column;
+  top: 0;
+  opacity: 0;
+  transition: all 0.5s linear;
 }
-.header .header_box .language_box .language_list.on li {
+.header .header_box .language_box .language_list li {
   padding: 10px;
   border: 1px solid #b2b2b2;
   border-radius: 50%;
   background-color: #fff;
   color: #353535;
   position: relative;
-  opacity: 0;
+  opacity: 1;
+  animation: tttt 1s linear;
   cursor: pointer;
-  animation: cc 0.5s 0.5s linear forwards;
 }
-.header .header_box .language_box .language_list.on li:first-child {
+.header .header_box .language_box .language_list li:first-child {
   background-color: #63bedf;
   color: #fff;
-  animation: cc 0.5s linear forwards;
 }
-@keyframes cc {
-  from {
-    opacity: 0;
-    right: -50px;
-  }
-  to {
-    opacity: 1;
-    right: -60px;
-  }
-}
-.header .header_box .language_box .language_list.on li:hover {
+.header .header_box .language_box .language_list li:hover {
   background-color: #63bedf;
   color: #fff;
   transition: 0.5s linear;
 }
-.header .header_box .language_box .language_list.on li + li {
+.header .header_box .language_box .language_list li + li {
   margin-top: 5px;
+}
+@keyframes cc {
+  from {
+    opacity: 0;
+    right: -30px;
+  }
+  to {
+    opacity: 1;
+    right: -50px;
+  }
+}
+@keyframes tttt {
+  from {
+    right: -50px;
+  }
+  to {
+    right: -40px;
+  }
+}
+.header .header_box .language_box .language_list.on {
+  opacity: 1;
+  transition: 0.5s;
+}
+.header .header_box .language_box .language_list.on li {
+  opacity: 0;
+  animation: cc 0.5s 0.5s linear forwards;
+}
+.header .header_box .language_box .language_list.on li:first-child {
+  animation: cc 0.5s linear forwards;
+}
+.header .header_box .language_box .language_list.on li:nth-child(2) {
+  animation: cc 0.5s 0.5s linear forwards;
 }
 .header .header_box .message_box {
   width: 40px;
@@ -1154,6 +1195,7 @@ body:has(.privacy_option.on) {
   border: 1px solid #fff;
   border-radius: 50px;
   color: #fff;
+  cursor: pointer;
 }
 .header .header_box .message_box:hover {
   opacity: 0.5;
@@ -1186,8 +1228,7 @@ body:has(.privacy_option.on) {
   transition: 0.5s;
   color: #000;
 }
-.header.on .language_box {
-  transition: 0.5s;
+.header.on .language_box .language_txt {
   color: #000;
   border: 1px solid #000;
 }
@@ -1616,6 +1657,13 @@ body:has(.privacy_option.on) {
     transform: rotate(-360deg);
   }
 }
+.hd_bg .scoll .circle a {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  z-index: 2;
+}
 .hd_bg .remind {
   width: 100%;
   max-width: 760px;
@@ -1800,7 +1848,7 @@ body:has(.privacy_option.on) {
   width: 1px;
   display: flex;
   position: absolute;
-  bottom: 45%;
+  top: 22%;
   left: 50%;
   background-color: #63bedf;
 }
@@ -1812,11 +1860,18 @@ body:has(.privacy_option.on) {
     left: 46%;
   }
 }
+@media screen and (max-width: 900px) {
+  .brand .brand_txt .brand_title::before {
+    left: 44%;
+  }
+}
+@media screen and (max-width: 600px) {
+  .brand .brand_txt .brand_title::before {
+    left: 42%;
+  }
+}
 @media screen and (max-width: 400px) {
   .brand .brand_txt .brand_title::before {
-    width: 90px;
-    height: 1px;
-    top: 0;
     left: 40%;
   }
 }
@@ -2131,7 +2186,7 @@ body:has(.privacy_option.on) {
 }
 .field .field_list::before {
   content: "";
-  width: 65px;
+  width: 130px;
   height: 100%;
   position: absolute;
   background: #fff;
@@ -2140,6 +2195,7 @@ body:has(.privacy_option.on) {
 }
 @media screen and (max-width: 1600px) {
   .field .field_list::before {
+    width: 65px;
     left: 0;
   }
 }
@@ -2148,8 +2204,45 @@ body:has(.privacy_option.on) {
     left: -65px;
   }
 }
+@media screen and (max-width: 1180px) {
+  .field .field_list::before {
+    width: 115px;
+  }
+}
 @media screen and (max-width: 960px) {
   .field .field_list::before {
+    display: none;
+  }
+}
+.field .field_list::after {
+  content: "";
+  width: 130px;
+  height: 100%;
+  position: absolute;
+  background: #fff;
+  right: -130px;
+  top: 0;
+}
+@media screen and (max-width: 1600px) {
+  .field .field_list::after {
+    width: 80px;
+    right: 0;
+  }
+}
+@media screen and (max-width: 1300px) {
+  .field .field_list::after {
+    width: 65px;
+    right: 213px;
+  }
+}
+@media screen and (max-width: 1180px) {
+  .field .field_list::after {
+    width: 114px;
+    right: 164px;
+  }
+}
+@media screen and (max-width: 960px) {
+  .field .field_list::after {
     display: none;
   }
 }
@@ -2706,12 +2799,17 @@ body:has(.privacy_option.on) {
   .events .content .slick-dots {
     position: absolute;
     top: 80px;
-    left: 40%;
+    left: 35%;
   }
 }
 @media screen and (max-width: 700px) {
   .events .content .slick-dots {
     left: 30%;
+  }
+}
+@media screen and (max-width: 600px) {
+  .events .content .slick-dots {
+    left: 22%;
   }
 }
 @media screen and (max-width: 400px) {
@@ -2806,6 +2904,9 @@ body:has(.privacy_option.on) {
   border-bottom: 1px solid #fff;
   overflow: hidden;
 }
+.events .content .slick-dots button::before {
+  padding: 2px 0;
+}
 .events .content .slick-dots button::after {
   content: "";
   width: 0px;
@@ -2813,7 +2914,7 @@ body:has(.privacy_option.on) {
   position: absolute;
   background-color: #36af63;
   left: 51px;
-  bottom: -15%;
+  bottom: -30%;
   z-index: 2;
 }
 .events .content .slick-dots .slick-active {
@@ -3986,7 +4087,7 @@ body:has(.privacy_option.on) {
   height: calc(100% - 30px);
   position: absolute;
   border-radius: 20px;
-  top: 45%;
+  top: 42%;
   left: 50%;
   transform: translate(-50%, -50%);
   opacity: 0;
@@ -4397,7 +4498,7 @@ body:has(.privacy_option.on) {
 .footer .footer_box .wrap .go_top .line {
   width: 1px;
   height: 200px;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.2);
   overflow: hidden;
   position: relative;
 }
@@ -4528,6 +4629,7 @@ body:has(.privacy_option.on) {
   content: "";
   width: 0;
   height: 1px;
+  margin-top: 5px;
   position: absolute;
   bottom: -2px;
   left: 0;
@@ -4544,13 +4646,18 @@ body:has(.privacy_option.on) {
   padding: 6px 0;
   display: flex;
 }
+.footer .footer_box .wrap .middle_box .message h2 {
+  width: 60px;
+}
 .footer .footer_box .wrap .middle_box .message p {
+  margin-left: 20px;
+}
+.footer .footer_box .wrap .middle_box .message .img {
   margin-left: 20px;
 }
 .footer .footer_box .wrap .middle_box .message .img i {
   width: 30px;
   height: 40px;
-  padding-left: 10px;
 }
 .footer .footer_box .wrap .middle_box .message .img i:hover {
   cursor: pointer;
@@ -4594,6 +4701,7 @@ body:has(.privacy_option.on) {
   content: "";
   width: 0;
   height: 1px;
+  margin-top: 5px;
   position: absolute;
   left: 0;
   display: block;
