--- a/style/main.scss
+++ b/style/main.scss
@@ -1,5 +1,8 @@
 @import "reset";
 @import "method";
+@import "header";
+@import "footer";
+@import "introduction";
 .all_body {
   overflow: hidden;
 }
@@ -191,9 +194,14 @@ body {
   width: 100%;
   height: calc(100% - 80px);
   position: fixed;
+  top: 0;
   bottom: 0;
   left: 0;
+ 
   z-index: 4;
+  @include rwd(1180){
+    top: auto;
+  }
   &::-webkit-scrollbar {
   	display: none;
 }
@@ -368,10 +376,11 @@ body {
           padding-left: 50px;
         }
         li {
-          width: 50%;
+          width: 40%;
           padding: 0 20px 62px 0;
           font-size: 19px;
           position: relative;
+          cursor: pointer;
           @include rwd(1180) {
             padding-right: 10px;
           }
@@ -863,370 +872,7 @@ body {
   }
 }
 
-// header
-.header {
-  width: 140px;
-  height: 100vh;
-  padding: 20px 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  position: fixed;
-  border-right: 1px solid #b2b2b2;
-  z-index: 20;
-  @include rwd(1180) {
-    display: none;
-  }
-  .hd_img {
-    width: 70px;
-    padding-top: 18%;
-    margin-left: 30px;
-    filter: contrast(0) brightness(10);
-    position: relative;
-    a {
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      left: 0;
-    }
-  }
-  .burger {
-    width: 24px;
-    height: 43px;
-    margin-bottom: 60px;
-    position: relative;
-    left: 50%;
-    cursor: pointer;
-    &:hover {
-      .menu {
-        &::before,
-        &::after {
-          height: 43px;
-          transition: 0.5s;
-        }
-      }
-    }
-    .menu {
-      width: 2px;
-      height: 43px;
-      background-color: #fff;
-      position: absolute;
-      display: flex;
-      justify-content: center;
-      align-items: flex-end;
-      writing-mode: vertical-lr;
-      &::before,
-      &::after {
-        content: "";
-        width: 2px;
-        height: 35px;
-        left: 0;
-        bottom: 0;
-        background-color: #fff;
-        position: absolute;
-        font-size: 12px;
-      }
-      &::before {
-        left: -10px;
-      }
-      &::after {
-        left: 10px;
-      }
-      &.on {
-        width: 0;
-        &::before,
-        &::after {
-          height: 43px;
-          left: 0;
-        }
-        &::before {
-          transform: rotate(30deg);
-        }
-        &::after {
-          transform: rotate(150deg);
-        }
-      }
-    }
-    p {
-      padding-right: 20px;
-      color: #fff;
-      font-size: 12px;
-    }
-  }
-  .header_box {
-    padding-bottom: 20px;
-    position: relative;
-    left: 30%;
-    .language_box {
-      position: relative;
-      .language_txt {
-        padding: 25px 10px;
-        display: flex;
-        border: 1px solid #fff;
-        color: #fff;
-        border-radius: 50px;
-        justify-content: center;
-        align-items: flex-end;
-        writing-mode: vertical-lr;
-        position: relative;
-        cursor: pointer;
-        z-index: 2;
-        &:hover {
-          opacity: 0.5;
-        }
-        p {
-          padding-top: 20px;
-        }
-      }
-      .language_list {
-        position: absolute;
-        display: flex;
-        flex-direction: column;
-        top: 0;
-        opacity: 0;
-        transition: all 0.5s linear;
-        li {
-          padding: 10px;
-          border: 1px solid #b2b2b2;
-          border-radius: 50%;
-          background-color: #fff;
-          color: #353535;
-          position: relative;
-          opacity: 1;
-          animation: tttt 1s linear;
-          cursor: pointer;
-          &:first-child {
-            background-color: #63bedf;
-            color: #fff;
-            animation: tttt 1s linear;
-          }
-          &:hover {
-            background-color: #63bedf;
-            color: #fff;
-            transition: 0.5s linear;
-          }
-          & + li {
-            margin-top: 5px;
-          }
-        }
-        @keyframes cc {
-          from {
-            opacity: 0;
-            right: -30px;
-          }
-          to {
-            opacity: 1;
-            right: -50px;
-          }
-        }
-        @keyframes tttt {
-          from {
-            right: -50px;
-          }
-          to {
-            right: -40px;
-          }
-        }
-        &.on {
-          opacity: 1;
-          transition: 0.5s;
-          li {
-            opacity: 0;
-            animation: cc 0.5s 0.5s linear forwards;
-            &:first-child {
-              animation: cc 0.5s linear forwards;
-            }
-            &:nth-child(2) {
-              animation: cc 0.5s 0.5s linear forwards;
-            }
-          }
-        }
-      }
-    }
-    .message_box {
-      width: 40px;
-      padding: 25px 10px;
-      margin-top: 10px;
-      display: flex;
-      flex-direction: column;
-      border: 1px solid #fff;
-      border-radius: 50px;
-      color: #fff;
-      cursor: pointer;
-      &:hover {
-        opacity: 0.5;
-      }
-      img {
-        width: 19px;
-        height: 14px;
-        margin-bottom: 10px;
-        filter: contrast(0) brightness(10);
-      }
-      h2 {
-        width: 19px;
-        display: flex;
-        align-items: center;
-        writing-mode: vertical-lr;
-      }
-    }
-  }
-  &.on {
-    .hd_img {
-      transition: 0.5s;
-      filter: contrast(100%) brightness(1);
-    }
-    .menu {
-      transition: 0.5s;
-      background-color: #000;
-      &::before,
-      &::after {
-        transition: 0.5s;
-        background-color: #000;
-      }
-      p {
-        transition: 0.5s;
-        color: #000;
-      }
-    }
-    .language_box {
-      .language_txt {
-        color: #000;
-        border: 1px solid #000;
-      }
-    }
-    .message_box {
-      transition: 0.5s;
-      color: #000;
-      border: 1px solid #000;
-      img {
-        transition: 0.5s;
-        filter: contrast(100%) brightness(1);
-      }
-    }
-  }
-}
 
-.header_m {
-  width: 100%;
-  height: 80px;
-  position: fixed;
-  z-index: 5;
-  display: none;
-  justify-content: space-between;
-  @include rwd(1180) {
-    display: flex;
-  }
-  .hd_m_img {
-    width: 150px;
-    margin: 20px 0 0 20px;
-    filter: contrast(0) brightness(10);
-    position: relative;
-    a {
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      left: 0;
-    }
-  }
-  .burger {
-    width: 24px;
-    height: 43px;
-    margin-bottom: 60px;
-    position: relative;
-    top: 40%;
-    right: 3%;
-    @include rwd(500) {
-      right: 4%;
-    }
-    cursor: pointer;
-    .menu {
-      width: 43px;
-      height: 2px;
-      background-color: #fff;
-      position: absolute;
-      left: -10px;
-      display: flex;
-      justify-content: center;
-      align-items: flex-end;
-      &::before,
-      &::after {
-        content: "";
-        width: 35px;
-        height: 2px;
-        right: 0;
-        bottom: 0;
-        background-color: #fff;
-        position: absolute;
-        display: flex;
-        font-size: 12px;
-      }
-      &::before {
-        top: -10px;
-      }
-      &::after {
-        top: 10px;
-      }
-      &.on {
-        width: 0;
-        &::before,
-        &::after {
-          width: 43px;
-          left: 0;
-          transition: all 0.5s;
-        }
-        &::before {
-          transform: rotate(150deg);
-          top: 0%;
-        }
-        &::after {
-          transform: rotate(30deg);
-          top: -10%;
-        }
-        p {
-          padding: 0 0 0 5px;
-        }
-      }
-    }
-    p {
-      padding-right: 20px;
-      color: #fff;
-      font-size: 12px;
-      position: absolute;
-      bottom: -30px;
-      left: 20%;
-    }
-  }
-  &.off {
-    .m_bg {
-      &::before {
-        background: linear-gradient(
-          to top,
-          rgba(59, 175, 219, 0.5) 100%,
-          rgba(54, 175, 101, 0.5) 100%
-        );
-      }
-    }
-  }
-  &.on {
-    background-color: #fff;
-    box-shadow: 0 0 15px rgba($color: #000000, $alpha: 0.1);
-    .hd_m_img {
-      filter: contrast(100%) brightness(1);
-    }
-    .burger {
-      .menu {
-        background-color: #000;
-        p {
-          color: #000;
-        }
-        &::before,
-        &::after {
-          background-color: #000;
-        }
-      }
-    }
-  }
-}
 
 // hd_bg
 .hd_bg {
@@ -2874,7 +2520,7 @@ body {
             }
           }
         }
-        .collection {
+        .collection_img {
           position: relative;
           &::before {
             content: "山采";
@@ -3983,316 +3629,3 @@ body {
   }
 }
 
-// footer
-.footer {
-  padding: 85px 50px 50px 140px;
-  @include rwd(1180) {
-    padding: 85px 50px 80px 0;
-  }
-  @include rwd(960) {
-    padding: 80px 20px;
-  }
-  @include rwd(400) {
-    padding: 80px 10px;
-  }
-  .footer_box {
-    width: 100%;
-    width: 100%;
-    padding: 103px 0 90px;
-    padding-left: calc(20px + 5.7%);
-    padding-right: 12%;
-    position: relative;
-    background: #bae1d0;
-    border-bottom-right-radius: 15px;
-    border-top-right-radius: 15px;
-    @include rwd(960) {
-      border-radius: 15px;
-    }
-    @include rwd(400) {
-      padding: 130px 0 90px 10px;
-    }
-    .wrap {
-      width: 100%;
-      max-width: 1200px;
-      display: flex;
-      justify-content: space-between;
-      @include rwd(960) {
-        flex-wrap: wrap;
-        justify-content: center;
-      }
-      @include rwd(840) {
-        // flex-wrap: nowrap;
-        justify-content: center;
-        align-items: center;
-      }
-      @include rwd(400) {
-        display: block;
-      }
-      .go_top {
-        position: absolute;
-        top: -10%;
-        right: 5%;
-        display: flex;
-        align-items: flex-end;
-        cursor: pointer;
-        opacity: 0;
-        @include rwd(1180) {
-          right: 2%;
-        }
-        @include rwd(400) {
-          opacity: 1;
-        }
-        @keyframes ddd {
-          from {
-            opacity: 0;
-            transform: translateY(-30px);
-          }
-          to {
-            opacity: 1;
-            transform: translateY(0);
-          }
-        }
-        &.on {
-          animation: ddd 1s 2s linear forwards;
-        }
-        .line {
-          width: 1px;
-          height: 200px;
-          background-color: rgba($color: #000000, $alpha: 0.2);
-          overflow: hidden;
-          position: relative;
-          &::before {
-            content: "";
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            background-color: #000000;
-            @keyframes bb {
-              from {
-                transform: translateY(100%);
-              }
-              to {
-                transform: translateY(-100%);
-              }
-            }
-            animation: bb 2s infinite linear;
-          }
-        }
-        h2 {
-          padding-left: 20px;
-          writing-mode: vertical-lr;
-          font-size: 18px;
-          letter-spacing: 2.5px;
-        }
-        a {
-          width: 100%;
-          height: 100%;
-          position: absolute;
-        }
-      }
-      .left_box {
-        opacity: 0;
-        .left_box_img {
-          max-width: 259px;
-          cursor: pointer;
-          position: relative;
-        }
-        .title {
-          padding-top: 36px;
-          font-size: 24px;
-          letter-spacing: 2.5px;
-          h2 {
-            font-weight: bolder;
-          }
-        }
-        p {
-          padding-top: 18px;
-          font-size: 14px;
-          color: #191919;
-        }
-        .txt {
-          font-size: 12px;
-          color: #191919;
-          .writer {
-            padding-top: 5px;
-            display: flex;
-            h3 {
-              padding-right: 5px;
-              cursor: pointer;
-              &:hover {
-                color: #63bedf;
-              }
-            }
-            span {
-              padding-left: 5px;
-              cursor: pointer;
-              &:hover {
-                color: #63bedf;
-              }
-            }
-          }
-          @include rwd(960) {
-            display: none;
-          }
-        }
-        @keyframes ccc {
-          from {
-            opacity: 0;
-            transform: translateX(-30px);
-          }
-          to {
-            opacity: 1;
-            transform: translateX(0);
-          }
-        }
-        animation: ccc 1s linear forwards;
-      }
-      .middle_box {
-        padding: 0 20px 0 134px;
-        @include rwd(1180) {
-          padding: 0 20px;
-        }
-        @include rwd(840) {
-          padding: 60px 80px 60px 0;
-        }
-        &.on {
-          animation: ccc 1s 0.5s linear forwards;
-        }
-        .title {
-          padding-bottom: 22px;
-          font-size: 25px;
-          font-weight: 500;
-          letter-spacing: 4px;
-          color: #191919;
-        }
-        .address,
-        .tel,
-        .email {
-          p {
-            position: relative;
-            cursor: pointer;
-            &::after {
-              content: "";
-              width: 0;
-              height: 1px;
-              margin-top: 5px;
-              position: absolute;
-              bottom: -2px;
-              left: 0;
-              display: block;
-              background: #191919;
-              transition: all 0.5s linear;
-            }
-            &:hover {
-              &::after {
-                width: 100%;
-              }
-            }
-          }
-        }
-        .message {
-          padding: 6px 0;
-          display: flex;
-          h2 {
-            width: 60px;
-          }
-          p {
-            margin-left: 20px;
-          }
-          .middle_box_img {
-            margin-left: 20px;
-            i {
-              width: 30px;
-              height: 40px;
-              &:hover {
-                cursor: pointer;
-                transition: 0.5s;
-                opacity: 0.5;
-              }
-            }
-          }
-        }
-      }
-      .right_box {
-        @include rwd(960) {
-          padding-top: 20px;
-        }
-        @include rwd(840) {
-          padding: 20px 60px 0 0;
-        }
-        &.on {
-          animation: ccc 1s 1.5s linear forwards;
-        }
-        .title {
-          padding-bottom: 22px;
-          font-size: 25px;
-          font-weight: 500;
-          letter-spacing: 4px;
-          color: #191919;
-          white-space: nowrap;
-        }
-        ul {
-          width: 100%;
-          max-width: 285px;
-          display: flex;
-          flex-wrap: wrap;
-          li {
-            width: 50%;
-            padding-bottom: 25px;
-            cursor: pointer;
-            position: relative;
-            &::after {
-              content: "";
-              width: 0;
-              height: 1px;
-              margin-top: 5px;
-              position: absolute;
-              left: 0;
-              display: block;
-              background: #191919;
-              transition: all 0.5s linear;
-            }
-            &:hover {
-              &::after {
-                width: 30%;
-              }
-            }
-          }
-        }
-        .txt {
-          font-size: 12px;
-          color: #191919;
-          white-space: nowrap;
-          display: none;
-          @include rwd(840) {
-            display: block;
-          }
-          .writer {
-            padding-top: 5px;
-            display: flex;
-            justify-content: center;
-            h3 {
-              padding-right: 5px;
-              cursor: pointer;
-              &:hover {
-                color: #63bedf;
-              }
-            }
-            span {
-              padding-left: 5px;
-              cursor: pointer;
-              &:hover {
-                color: #63bedf;
-              }
-            }
-          }
-          p {
-            @include rwd(840) {
-              padding-top: 30px;
-            }
-          }
-        }
-      }
-    }
-  }
-}
